# Threads_Lab_1

./: .gitignore  CMakeLists.txt  main.c  readme.md  requirements.txt
src/Task1/: task1.c  task1.h
src/Task2/: plot.py  task2.c  task2.h
src/Task3/: pth_ll_rwl.c  pth_ll_rwl_my_lock.c  task3.c  task3.h
src/utils/: pth_ll_rwl.c  pth_ll_rwl.h  timer.h
